objects/LLC_BI__Ownership_Structure_Role__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is required to activate an ownership structure role. Ownership structure roles define individual or business ownership of a deposit account. This flag to be set if role is currently used.</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Authorized_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators select this optional boolean field to indicate if a business relationship with this Ownership Structure role is authorized to authorize an individual or another business relationship as an authorized role. By default, it is false.</description>
        <inlineHelpText>Select this field when this Ownership Structure role is for an authorized business.</inlineHelpText>
        <label>Is Authorized Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Authorized_Signer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators select this optional boolean field to indicate if an individual relationship with this Ownership Structure role is authorized to transact on a particular product on behalf of a legal entity. By default, it is false.</description>
        <label>Is Authorized Individual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is required to indicate if an ownership structure role is required. Requiring ownership structure roles enforces that role be assigned to a desposit account during the New Deposit Workflow. This flag is to be set if role is required for ownership structure type.</description>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ownership_Structure_Role_Field_Set__c</fullName>
        <description>The administrator populates this optional text field. The text field specifies the API name of the field set displayed to users, based on the configured Ownership Structure Role. By default, it is blank.</description>
        <inlineHelpText>Populate this field with the API name of the desired field set that will display when you add this role to a deposit.</inlineHelpText>
        <label>Ownership Structure Role Field Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Ownership_Structure_Type__c</fullName>
        <description>This field is required when configuring deposit ownership structures for the New Deposit Workflow. It assocaites an ownership structure role to a ownership structure type.</description>
        <label>Ownership Structure Type</label>
        <referenceTo>LLC_BI__Ownership_Structure_Type__c</referenceTo>
        <relationshipLabel>Ownership Structure Roles</relationshipLabel>
        <relationshipName>Ownership_Structure_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Relationship_Type__c</fullName>
        <description>This field is required and must be set during configuration of Ownership Structure Roles. This field is used to indicate the role a relationship plays for a deposit account. It is also used to set the Ownership Type field on the Entity Involvement record, linking the deposit to the relationship.</description>
        <label>Ownership Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Role_Description__c</fullName>
        <description>This field is optional and is manually entered during ownership structure configuration. This field is used to capture a description of the ownership structure role.</description>
        <label>Role Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.html</description>
        <externalId>true</externalId>
        <inlineHelpText>This system-populated field displays the unique identifier for Ownership Structure Role.</inlineHelpText>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WKDDP__Description__c</fullName>
        <description>Administrators populate this optional text field with a description of the other rights at death option.</description>
        <inlineHelpText>Enter a description of the other rights at death option.</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WKDDP__Exercise_Type__c</fullName>
        <description>Users select whether the power of attorneys for the holder may exercise powers independently or jointly from this optional picklist.</description>
        <inlineHelpText>Select whether the power of attorneys for the holder may exercise powers independently or jointly.</inlineHelpText>
        <label>Exercise Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Independently</fullName>
                </value>
                <value>
                    <fullName>Jointly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WKDDP__Form_Power_Of_Attorney_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional boolean field to indicate if a true separate Power of Attorney (POA) document is desired. By default, it is false.</description>
        <inlineHelpText>Select the checkbox to indicate a true separate Power of Attorney (POA) document is desired. If not, leave the checkbox unselected.</inlineHelpText>
        <label>Form Power Of Attorney Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WKDDP__Personal_Agent_Durable_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional boolean field if any personal agent assigned on the account is durable (continues after the legal incompetency of the account holder and terminating only at death). By default, this field is false.</description>
        <inlineHelpText>Select the checkbox to indicate that any personal agent assigned on the account is durable.</inlineHelpText>
        <label>Personal Agent Durable Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WKDDP__Relationship_Description__c</fullName>
        <description>Users populate this optional text field with a description of the relationship between the fiduciary (POA) and the account.</description>
        <inlineHelpText>Enter the description of the relationship between the fiduciary (POA) and the account.</inlineHelpText>
        <label>Relationship Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WKDDP__nCino_Code__c</fullName>
        <description>This optional text field houses the middleware code that designates which schema roles are added to the entity. It is visible to administrators.</description>
        <inlineHelpText>Populate this field with the corresponding role code.</inlineHelpText>
        <label>nCino Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Ownership Structure Role</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ownership Structure Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ownership Structure Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>